--- a/server/database/prisma.yml
+++ b/server/database/prisma.yml
@@ -10,3 +10,5 @@ secret: mysecret123
 
 # the file path pointing to your data model
 datamodel: datamodel.graphql
+
+cluster: public-fancyfinger-526/prisma-us1
